--- a/about.html
+++ b/about.html
@@ -1,153 +1,161 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/websaite#">
-<meta property="og:url" content="https://ryosukefujiki.design" />
-<meta property="og:type" content="website" />
-<meta property="fb:app_id" content="828074940735241" />
-<meta property="og:title" content="RyosukeFujiki Portfolio" />
-<meta property="og:description" content="藤木良祐のポートフォリオサイト" />
-<meta property="og:site_name" content="RyosukeFujiki Portfolio" />
-<meta property="og:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
-<meta property="og:image:width" content="1296" />
-<meta property="og:image:height" content="655" />
+    <meta property="og:url" content="https://ryosukefujiki.design" />
+    <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="828074940735241" />
+    <meta property="og:title" content="RyosukeFujiki Portfolio" />
+    <meta property="og:description" content="藤木良祐のポートフォリオサイト" />
+    <meta property="og:site_name" content="RyosukeFujiki Portfolio" />
+    <meta property="og:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
+    <meta property="og:image:width" content="1296" />
+    <meta property="og:image:height" content="655" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:description" content="藤木良祐のポートフォリオサイト" />
+    <meta name="twitter:title" content="RyosukeFujiki Portfolio" />
+    <meta name="twitter:site" content="@totepo18" />
+    <meta name="twitter:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>RyosukeFujiki Portfolio | About</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="shortcut icon" href="images/home/favicon.ico">
+    <link rel="apple-touch-icon" size="152x152" href="/images/home/apple-touch-icon.png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/header_menu.js">
+    </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:description" content="藤木良祐のポートフォリオサイト"/>
-<meta name="twitter:title" content="RyosukeFujiki Portfolio" />
-<meta name="twitter:site" content="@totepo18" />
-<meta name="twitter:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RyosukeFujiki Portfolio | About</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:700i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/about.css">
-  <link rel="shortcut icon" href="images/home/favicon.ico" >
-  <link rel="apple-touch-icon" size="152x152" href="/images/home/apple-touch-icon.png">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="js/header_menu.js">
-  </script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
-  <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                                    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-100786231-1', 'auto');
-            ga('send', 'pageview');
-          </script>
+        ga('create', 'UA-100786231-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
+
 <body>
-  <!-- BEM規則 block__element--modifier -->
+    <!-- BEM規則 block__element--modifier -->
 
-  <section class="header__bar">
-    <a href="index.html" class="header__title">
-      <img src="images/Header/HeaderTitleImg.png" alt="" class="header__title__img">
-    </a>
-    <div href="" class="header__button">
-      <img src="images/Header/HeaderTitleMenu.png" alt="" class="header__button__img">
-      <span></span>
-      <span></span>
-      <span></span>
+    <section class="header__bar">
+        <a href="index.html" class="header__title">
+            <img src="images/Header/HeaderTitleImg.png" alt="" class="header__title__img">
+        </a>
+        <div href="" class="header__button">
+            <img src="images/Header/HeaderTitleMenu.png" alt="" class="header__button__img">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </section>
+
+
+    <div class="overlay">
+        <nav class="overlay-menu">
+            <ul>
+                <li class="overlay__menu__list">
+                    <a href="index.html" class="overlay__home">
+                        <span class="text--letterspace">Work</span>s
+                    </a>
+                </li>
+                <li class="overlay__menu__list">
+                    <a href="about.html" class="overlay__works">
+                        <span class="text--letterspace">Abou</span>t
+                    </a>
+                </li>
+                <li class="overlay__menu__list">
+                    <a href="https://note.mu/ryosukefujiki" target="_blank" class="overlay__about">
+                        <span class="text--letterspace">Blog</span>s
+                    </a>
+                </li>
+                <li class="overlay__menu__list">
+                    <a href="resume.pdf" class="overlay__resume" target="_blank">
+                        <span class="text--letterspace">Resum</span>e
+                    </a>
+                </li>
+
+                <li class="overlay__menu__list">
+                    <div class="clearfix">
+                        <a href="https://dribbble.com/bighappy" class="overlay__icon overlay__icon__dribble" target="_blank">
+                            <i class="fab fa-dribbble"></i>
+                        </a>
+                        <a href="https://www.facebook.com/rfujiki0625" class="overlay__icon overlay__icon__facebook" target="_blank">
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                        <a href="https://www.instagram.com/ryosukefujiki/" class="overlay__icon overlay__icon__instagram" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                </li>
+
+            </ul>
+        </nav>
     </div>
-  </section>
-
-
-  <div class="overlay">
-    <nav class="overlay-menu">
-      <ul>
-        <li class="overlay__menu__list"><a href="index.html" class="overlay__home">
-          <span class="text--letterspace">Work</span>s
-        </a></li>
-        <li class="overlay__menu__list"><a href="about.html" class="overlay__works">
-          <span class="text--letterspace">Abou</span>t
-        </a></li>
-        <li class="overlay__menu__list"><a href="https://note.mu/ryosukefujiki" target = "_blank" class="overlay__about">
-          <span class="text--letterspace">Blog</span>s
-        </a></li>
-        <li class="overlay__menu__list"><a href="resume.pdf" class="overlay__resume"  target="_blank">
-          <span class="text--letterspace">Resum</span>e
-        </a></li>
-
-        <li class="overlay__menu__list">
-          <div class="clearfix">
-            <a href="https://dribbble.com/bighappy" class="overlay__icon overlay__icon__dribble" target="_blank">
-              <i class="fab fa-dribbble"></i>
-            </a>
-            <a href="https://www.facebook.com/rfujiki0625" class="overlay__icon overlay__icon__facebook" target="_blank">
-              <i class="fab fa-facebook-square"></i>
-            </a>
-            <a href="https://www.instagram.com/ryosukefujiki/" class="overlay__icon overlay__icon__instagram" target="_blank">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </div>
-        </li>
-
-      </ul>
-    </nav>
-  </div>
 
 
 
- <h1 class="heading"><span class="text--letterspace">Abou</span>t</h1>
+    <h1 class="heading"><span class="text--letterspace">Abou</span>t</h1>
 
- <section class="about__contents">
-   <div class="about__introduction clearfix">
-     <div class="trim">
-       <img src="images/About/profile2.png" alt="" class="about__introduction__img">
-     </div>
-     <div class="about__introduction__text">
-       <h2 class="about__introduction__title">Hi, I’m Ryosuke Fujiki</h2><br>
-       <p class="about__introduction__details">1996年シンガポール生まれ、東京育ち。2015年より慶應義塾大学環境情報学部に通い、2018年春に大学４年生に進学する。HCI, UI/UX を研究テーマとする中西泰人研究室に所属し、 ORFや MAKER FAIRE TOKYO などの展示を通して研究発表を行ってきた。デザイン、エンジニアリングの両軸を専門とする企画立案から ”ものづくり” をすることが得意なクリエイター。</p>
-     </div>
-   </div>
+    <section class="about__contents">
+        <div class="about__introduction clearfix">
+            <div class="trim">
+                <img src="images/About/profile2.png" alt="" class="about__introduction__img">
+            </div>
+            <div class="about__introduction__text">
+                <h2 class="about__introduction__title">Hi, I’m Ryosuke Fujiki</h2><br>
+                <p class="about__introduction__details">1996年シンガポール生まれ、東京育ち。2015年より慶應義塾大学環境情報学部に通い、2018年春に大学４年生に進学する。HCI, UI/UX を研究テーマとする中西泰人研究室に所属し、 ORFや MAKER FAIRE TOKYO などの展示を通して研究発表を行ってきた。デザイン、エンジニアリングの両軸を専門とする企画立案から ”ものづくり” をすることが得意なクリエイター。</p>
+            </div>
+        </div>
 
-   <div class="about__skill clearfix">
-     <img src="images/About/Skill.gif" alt="" class="sp_about__skill__img">
-     <div class="about__skill__text">
-       <h2 class="about__skill__title">My Skill</h2><br>
-       <p class="about__skill__details">
-        Adobe Illustrator / Photoshop<br>
-        Adobe Premiere / AfterEffects<br>
-        HTML  / CSS /  JavaScript /  Python<br>
-        Sketch<br>
-        ProtoPie<br>
-      </p>
-     </div>
-     <img src="images/About/Skill.gif" alt="" class="about__skill__img">
-   </div>
+        <div class="about__skill clearfix">
+            <img src="images/About/Skill.gif" alt="" class="sp_about__skill__img">
+            <div class="about__skill__text">
+                <h2 class="about__skill__title">My Skill</h2><br>
+                <p class="about__skill__details">
+                    Adobe Illustrator / Photoshop<br> Adobe Premiere / AfterEffects<br> HTML / CSS / JavaScript / Python<br> Sketch
+                    <br> ProtoPie
+                    <br>
+                </p>
+            </div>
+            <img src="images/About/Skill.gif" alt="" class="about__skill__img">
+        </div>
 
-   <div class="about__internship clearfix">
-     <div class="trim about__internship__img">
-       <img src="images/About/internship.jpg" alt="">
-     </div>
-     <div class="about__internship__text">
-       <h2 class="about__internship__title">INTERNSHIP 2015 - 2018</h2><br>
-       <p class="about__internship__details">
-        2018 Yahoo! 冬季インターンシップ<br>
-        2018 Goodpatch 冬季インターンシップ　最優秀賞受賞<br>
-        2017 DeNA 「Delight U for Student」<br>
-        2017 CyberAgent 「UIDA」　UI発明賞受賞<br>
-        2017 CyberAgent Technical Creator Challenge<br>
-        2017 電通「アイディアの学校」　金賞受賞<br>
-        2016 チームラボ株式会社<br>
-        2015 株式会社ライフイズテック
-      </p>
-     </div>
-   </div>
+        <div class="about__internship clearfix">
+            <div class="trim about__internship__img">
+                <img src="images/About/internship.jpg" alt="">
+            </div>
+            <div class="about__internship__text">
+                <h2 class="about__internship__title">INTERNSHIP 2015 - 2018</h2><br>
+                <p class="about__internship__details">
+                    2018 Yahoo! 冬季インターンシップ<br> 2018 Goodpatch 冬季インターンシップ　最優秀賞受賞<br> 2017 DeNA 「Delight U for Student」<br> 2017 CyberAgent 「UIDA」　UI発明賞受賞<br> 2017 CyberAgent Technical Creator Challenge<br> 2017 電通「アイディアの学校」　金賞受賞<br> 2016 チームラボ株式会社<br>                    2015 株式会社ライフイズテック
+                </p>
+            </div>
+        </div>
 
-   <!-- <a href="" class="about__contact">Contact Me!</a> -->
- </section>
+        <!-- <a href="" class="about__contact">Contact Me!</a> -->
+    </section>
 
 
- <footer class="footer">
-   © 2018 Ryosuke Fujiki
- </footer>
+    <footer class="footer">
+        © 2018 Ryosuke Fujiki
+    </footer>
 
 
 </body>
+
 </html>
