--- a/index.html
+++ b/index.html
@@ -1,171 +1,187 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/websaite#">
-<meta property="og:url" content="https://ryosukefujiki.design" />
-<meta property="og:type" content="website" />
-<meta property="fb:app_id" content="828074940735241" />
-<meta property="og:title" content="RyosukeFujiki Portfolio" />
-<meta property="og:description" content="藤木良祐のポートフォリオサイト" />
-<meta property="og:site_name" content="RyosukeFujiki Portfolio" />
-<meta property="og:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
-<meta property="og:image:width" content="1296" />
-<meta property="og:image:height" content="655" />
+    <meta property="og:url" content="https://ryosukefujiki.design" />
+    <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="828074940735241" />
+    <meta property="og:title" content="RyosukeFujiki Portfolio" />
+    <meta property="og:description" content="藤木良祐のポートフォリオサイト" />
+    <meta property="og:site_name" content="RyosukeFujiki Portfolio" />
+    <meta property="og:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
+    <meta property="og:image:width" content="1296" />
+    <meta property="og:image:height" content="655" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:description" content="藤木良祐のポートフォリオサイト" />
+    <meta name="twitter:title" content="RyosukeFujiki Portfolio" />
+    <meta name="twitter:site" content="@totepo18" />
+    <meta name="twitter:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
 
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:description" content="藤木良祐のポートフォリオサイト"/>
-<meta name="twitter:title" content="RyosukeFujiki Portfolio" />
-<meta name="twitter:site" content="@totepo18" />
-<meta name="twitter:image" content="https://ryosukefujiki.design/images/home/ogp.png" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>RyosukeFujiki Portfolio | Works</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/work.css">
+    <link rel="shortcut icon" href="images/home/favicon.ico">
+    <link rel="apple-touch-icon" size="152x152" href="/images/home/apple-touch-icon.png">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/header_menu.js">
+    </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RyosukeFujiki Portfolio | Works</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:700i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/work.css">
-  <link rel="shortcut icon" href="images/home/favicon.ico" >
-  <link rel="apple-touch-icon" size="152x152" href="/images/home/apple-touch-icon.png">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script type="text/javascript" src="js/header_menu.js">
-  </script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
-  <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                                    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-100786231-1', 'auto');
-            ga('send', 'pageview');
-          </script>
+        ga('create', 'UA-100786231-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
+
 <body>
-  <!-- BEM規則 block__element--modifier -->
+    <!-- BEM規則 block__element--modifier -->
 
-  <section class="header__bar">
-    <a href="index.html" class="header__title">
-      <img src="images/Header/HeaderTitleImg.png" alt="" class="header__title__img">
-    </a>
-    <div href="" class="header__button">
-      <img src="images/Header/HeaderTitleMenu.png" alt="" class="header__button__img">
-      <span></span>
-      <span></span>
-      <span></span>
+    <section class="header__bar">
+        <a href="index.html" class="header__title">
+            <img src="images/Header/HeaderTitleImg.png" alt="" class="header__title__img">
+        </a>
+        <div href="" class="header__button">
+            <img src="images/Header/HeaderTitleMenu.png" alt="" class="header__button__img">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </section>
+
+
+    <div class="overlay">
+        <nav class="overlay-menu">
+            <ul>
+                <li class="overlay__menu__list">
+                    <a href="index.html" class="overlay__home">
+                        <span class="text--letterspace">Work</span>s
+                    </a>
+                </li>
+                <li class="overlay__menu__list">
+                    <a href="about.html" class="overlay__works">
+                        <span class="text--letterspace">Abou</span>t
+                    </a>
+                </li>
+                <li class="overlay__menu__list">
+                    <a href="https://note.mu/ryosukefujiki" target="_blank" class="overlay__about">
+                        <span class="text--letterspace">Blog</span>s
+                    </a>
+                </li>
+                <li class="overlay__menu__list">
+                    <a href="resume.pdf" class="overlay__resume" target="_blank">
+                        <span class="text--letterspace">Resum</span>e
+                    </a>
+                </li>
+
+                <li class="overlay__menu__list">
+                    <div class="clearfix">
+                        <a href="https://dribbble.com/bighappy" class="overlay__icon overlay__icon__dribble" target="_blank">
+                            <i class="fab fa-dribbble"></i>
+                        </a>
+                        <a href="https://www.facebook.com/rfujiki0625" class="overlay__icon overlay__icon__facebook" target="_blank">
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                        <a href="https://www.instagram.com/ryosukefujiki/" class="overlay__icon overlay__icon__instagram" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
+                </li>
+
+            </ul>
+        </nav>
     </div>
-  </section>
 
 
-  <div class="overlay">
-    <nav class="overlay-menu">
-      <ul>
-        <li class="overlay__menu__list"><a href="index.html" class="overlay__home">
-          <span class="text--letterspace">Work</span>s
-        </a></li>
-        <li class="overlay__menu__list"><a href="about.html" class="overlay__works">
-          <span class="text--letterspace">Abou</span>t
-        </a></li>
-        <li class="overlay__menu__list"><a href="https://note.mu/ryosukefujiki" target = "_blank" class="overlay__about">
-          <span class="text--letterspace">Blog</span>s
-        </a></li>
-        <li class="overlay__menu__list"><a href="resume.pdf" class="overlay__resume"  target="_blank">
-          <span class="text--letterspace">Resum</span>e
-        </a></li>
 
-        <li class="overlay__menu__list">
-          <div class="clearfix">
-            <a href="https://dribbble.com/bighappy" class="overlay__icon overlay__icon__dribble" target="_blank">
-              <i class="fab fa-dribbble"></i>
+    <h1 class="heading"><span class="text--letterspace">Work</span>s</h1>
+
+    <section class="work__contents clearfix">
+
+
+        <!-- </div> -->
+
+        <div class="swiper-slide swiper-slide-left">
+            <a href="hive.html">
+                <div class="contents__bg">
+                </div>
+                <div class="trim">
+                    <img src="images/home/hive_home.png" alt="" class="contents__work__img">
+                </div>
+                <p class="contents__title">UI / UX Design</p>
+                <p class="contents__category">Hive</p>
             </a>
-            <a href="https://www.facebook.com/rfujiki0625" class="overlay__icon overlay__icon__facebook" target="_blank">
-              <i class="fab fa-facebook-square"></i>
+        </div>
+
+        <div class="swiper-slide swiper-slide-right">
+            <a href="familybook.html">
+                <div class="contents__bg">
+                </div>
+                <div class="trim">
+                    <img src="images/home/familybook_home.png" alt="" class="contents__work__img">
+                </div>
+                <p class="contents__title">Planning</p>
+                <p class="contents__category">かぞくが、ものがたり。</p>
             </a>
-            <a href="https://www.instagram.com/ryosukefujiki/" class="overlay__icon overlay__icon__instagram" target="_blank">
-              <i class="fab fa-instagram"></i>
+        </div>
+
+        <div class="swiper-slide  swiper-slide-left">
+            <a href="lineandball.html">
+                <div class="contents__bg">
+                </div>
+                <div class="trim">
+                    <img src="images/home/lineandball.png" alt="" class="contents__work__img">
+                </div>
+                <p class="contents__title">Game Design</p>
+                <p class="contents__category">LINE and BALL</p>
             </a>
-          </div>
-        </li>
+        </div>
 
-      </ul>
-    </nav>
-  </div>
+        <div class="swiper-slide  swiper-slide-right">
+            <a href="playfulfes.html">
+                <div class="contents__bg">
+                </div>
+                <div class="trim">
+                    <img src="images/home/playfulfes.png" alt="" class="contents__work__img">
+                </div>
+                <p class="contents__title">Web Design</p>
+                <p class="contents__category">プレイフルフェス 2018 Winter</p>
+            </a>
+        </div>
 
-
-
- <h1 class="heading"><span class="text--letterspace">Work</span>s</h1>
-
- <section class="work__contents clearfix">
-
-
-   <!-- </div> -->
-
-   <div class="swiper-slide swiper-slide-left">
-     <a href="hive.html">
-     <div class="contents__bg">
-     </div>
-     <div class="trim">
-       <img src="images/home/hive_home.png" alt="" class="contents__work__img">
-     </div>
-     <p class="contents__title">UI / UX Design</p>
-     <p class="contents__category">Hive</p>
-     </a>
-   </div>
-
-   <div class="swiper-slide swiper-slide-right">
-     <a href="familybook.html">
-     <div class="contents__bg">
-     </div>
-     <div class="trim">
-       <img src="images/home/familybook_home.png" alt="" class="contents__work__img">
-     </div>
-     <p class="contents__title">Planning</p>
-     <p class="contents__category">かぞくが、ものがたり。</p>
-     </a>
-   </div>
-
-   <div class="swiper-slide  swiper-slide-left">
-     <a href="lineandball.html">
-     <div class="contents__bg">
-     </div>
-     <div class="trim">
-       <img src="images/home/lineandball.png" alt="" class="contents__work__img">
-     </div>
-     <p class="contents__title">Game Design</p>
-     <p class="contents__category">LINE and BALL</p>
-     </a>
-   </div>
-
-   <div class="swiper-slide  swiper-slide-right">
-     <a href="playfulfes.html">
-     <div class="contents__bg">
-     </div>
-     <div class="trim">
-       <img src="images/home/playfulfes.png" alt="" class="contents__work__img">
-     </div>
-     <p class="contents__title">Web Design</p>
-     <p class="contents__category">プレイフルフェス 2018 Winter</p>
-     </a>
-   </div>
-
-   <div class="swiper-slide swiper-slide-left">
-     <a href="scrapboard.html">
-     <div class="contents__bg">
-     </div>
-     <div class="trim">
-       <img src="images/home/scrapboard02.png" alt="" class="contents__work__img">
-     </div>
-     <p class="contents__title">UI / UX Design</p>
-     <p class="contents__category">Scrap Board</p>
-     </a>
-   </div>
+        <div class="swiper-slide swiper-slide-left">
+            <a href="scrapboard.html">
+                <div class="contents__bg">
+                </div>
+                <div class="trim">
+                    <img src="images/home/scrapboard02.png" alt="" class="contents__work__img">
+                </div>
+                <p class="contents__title">UI / UX Design</p>
+                <p class="contents__category">Scrap Board</p>
+            </a>
+        </div>
 
 
 
 
 
-   <!-- <div class="swiper-slide">
+        <!-- <div class="swiper-slide">
      <a href="">
      <div class="contents__bg">
      </div>
@@ -178,13 +194,14 @@
 
 
 
-   <!-- <a href="" class="about__contact">Contact Me!</a> -->
- </section>
+        <!-- <a href="" class="about__contact">Contact Me!</a> -->
+    </section>
 
-<!-- #f9f9f9 #d5d5d5 -->
- <footer class="footer">
-   © 2018 Ryosuke Fujiki
- </footer>
+    <!-- #f9f9f9 #d5d5d5 -->
+    <footer class="footer">
+        © 2018 Ryosuke Fujiki
+    </footer>
 
 </body>
+
 </html>
